--- a/frontend-app/android/app/src/main/AndroidManifest.xml
+++ b/frontend-app/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.airvila.airvila">
+    <uses-permission android:name="android.permission.INTERNET"/>
    <application
         android:label="airvila"
         android:name="${applicationName}"
